--- a/fara.html
+++ b/fara.html
@@ -23,6 +23,52 @@
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <style>
+        .text {
+            font-size: 15px;
+            /* Ukuran font header */
+            font-weight: bold;
+            /* Tebal font header */
+            padding-top: 1rem;
+        }
+
+        .description {
+            margin-left: 20px;
+            /* Jarak menjorok ke dalam */
+        }
+
+        .ts {
+            font-size: 17px;
+            padding-top: 1rem;
+        }
+
+        .ts1 {
+            font-size: 17px;
+            padding-top: 1rem;
+        }
+
+        .ds {
+            padding-top: 10px;
+            margin-left: 3rem;
+        }
+        .ds1 {
+            padding-top: 4px;
+            margin-left: 3rem;
+        }
+
+        .tsds {
+            padding-top: 1rem;
+        }
+
+        .tsds1 {
+            margin-left: 3rem;
+            padding-top: 10px;
+        }
+
+        .tsds1 li {
+            font-size: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -45,7 +91,69 @@
         </nav>
     </header>
 
-
+    <div class="container" style="padding-top: 10rem;">
+        <h3 class="ts">
+            Berikut adalah deskripsi tiga macam tim saya selama magang di P. Universal Big Data:
+        </h3>
+        <!-- <h3 class="ts1">
+            web teknologi. Saya bekerja pada:
+        </h3> -->
+        <div class="ds">
+            <h4>1. Proyek Membuat Chatbot AI Menggunakan Botpress</h4>
+            <div class="ds1">
+                <h4 style="padding-top: 5px;">Proyek ini bertujuan untuk mengembangkan berbagai chatbot menggunakan
+                    Botpress sebagai frontend. Saya telah berpengalaman</h4>
+                <h4 style="padding-top: 5px;"> menggunakan dua versi Botpress, yaitu versi lama dengan server bp.exe
+                    dan Botpress terbaru yaitu Botpress Cloud yang berbasis </h4>
+                <h4 style="padding-top: 5px;"> internet. Dalam proyek-proyek ini, chatbot diintegrasikan dengan database MySQL dan
+                    FastAPI sebagai backend. Berikut beberapa </h4>
+                <h4 style="padding-top: 5px;">chatbot yang telah dikembangkan :</h4>
+                <div class="tsds1">
+                    <li>Chatbot Bigmovie: Menggunakan FatsAPI yang dikerjakan oleh rekan saya untuk memberikan informasi terkait film.</li>
+                    <li>Chatbot Manajemen Siswa: Membantu dalam pengelolaan data siswa.</li>
+                    <li>Chatbot UKM: Menyediakan dukungan dan informasi untuk Usaha Kecil dan Menengah.</li>
+                    <li>Duplikasi Chatbot Blibli dan Erajaya: Meniru fungsionalitas chatbot untuk perusahaan-perusahaan besar.</li>
+                    <li>Chatbot Quiz dan Ujian: Menyediakan platform untuk kuis dan ujian online.</li>
+                    <li>Chatbot Quiz dan Ujian: Menyediakan platform untuk kuis dan ujian online.</li>
+                </div>
+                <h4 style="padding-top: 2rem;">Dalam proyek ini, saya bertanggung jawab sebagai frontend developer yang menangani tampilan chatbot serta pengelolaan database. </h4>
+                <h4 style="padding-top: 5px; padding-bottom: 2rem;"> Saya bekerja dalam tim dengan rekan yang menangani backend, termasuk pembuatan API.</h4>
+            </div>
+            <h4 class="tsds">
+                2. Digital Marketing Nobox.ai
+            </h4>
+            <div class="ds1">
+                <h4 style="padding-top: 5px;">Proyek ini fokus pada pemasaran digital untuk Nobox.ai. Dalam tim ini, tugas utama saya adalah memahami dan mengoperasikan</h4>
+                <h4 style="padding-top: 5px;"> semua fitur yang tersedia di Nobox.ai, serta menjalankan latihan pemasaran untuk platform ini.</h4>
+                <h4 style="padding-top: 5px;">  Berikut beberapa tanggung jawab saya dalam proyek ini:</h4>
+                <div class="tsds1">
+                    <li>Pemahaman Fitur Nobox.ai: Pelajari dan kuasai semua fitur yang ditawarkan oleh Nobox.ai.</li>
+                    <li>Latihan Pemasaran: Mengaplikasikan strategi pemasaran untuk meningkatkan awareness dan penggunaan Nobox.ai.</li>
+                </div>
+                <h4 style="padding-top: 2rem;">Proyek ini menuntut kemampuan analisis yang kuat serta keterampilan dalam mengaplikasikan strategi pemasaran digital.</h4>
+            </div>
+            <h4 class="tsds">
+                3. Tim Akademik Ubig 
+            </h4>
+            <div class="ds1">
+                <h4 style="padding-top: 5px;">Dalam proyek ini, saya bertugas mendukung kegiatan akademik di Ubig. Tugas-tugas saya meliputi:</h4>
+                <div class="tsds1">
+                    <li>Distribusi Link Konfirmasi Kehadiran: Kirim link konfirmasi kehadiran kepada guru-guru yang mewakili sekolah-sekolah target.</li>
+                    <li>Pengumpulan Draft MoU: Memintai draft-draft MoU dari sekolah-sekolah yang belum mengirimkan.</li>
+                    <li>Update dan Pembuatan List di Google Spreadsheet: Mengelola dan memperbarui data terkait soft launching Nobox.ai.</li>
+                    <li>Partisipasi Soft Launching Nobox.ai: Pada soft launching 12 Juni 2024 di gedung MCC, bertugas di resepsionis untuk melayani guru-guru dan mengurus draft MoU.</li>
+                </div>
+                <h4 style="padding-top: 2rem;">Dalam proyek ini, keterampilan komunikasi dan manajemen data sangat penting untuk </h4>
+                <h4 style="padding-top: 5px; padding-bottom: 2rem;">memastikan kelancaran acara dan administrasi yang terkait.</h4>
+            </div>
+        </div>
+        <h3 class="ts">
+            Ketiga proyek ini menunjukkan kemampuan Saya dalam berbagai bidang teknologi dan manajemen, serta kemampuan
+        </h3>
+        <h3 class="ts">
+            untuk bekerja dalam tim dan mengelola tugas-tugas yang kompleks.
+        </h3>
+    </div>
 
 
 
