--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </section>
 
-    <div class="pt-5 pb-5">
+    <div class="pt-5">
         <div class="container">
             <div class="row project">
                 <div class="section-head-1 col-sm-12" style="text-align: center;">
