--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -44,14 +44,12 @@
             text-align: center;
             box-sizing: border-box;
             padding: 20px;
-            /* tambahkan padding agar konten tidak menempel pada tepi */
         }
 
         .modal img {
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
-            /* agar gambar tetap proporsional */
             margin: auto;
         }
 
@@ -65,7 +63,8 @@
             animation-name: zoom;
             animation-duration: 0.6s;
             object-fit: contain;
-            /* agar gambar tetap proporsional */
+            background: none;
+            /* Atau background: transparent; */
         }
 
         @keyframes zoom {
@@ -82,7 +81,6 @@
             position: absolute;
             top: 10px;
             right: 20px;
-            /* color: #f1f1f1; */
             font-size: 40px;
             font-weight: bold;
             transition: 0.3s;
@@ -206,7 +204,7 @@
                 <h4 style="padding-top: 1rem;">sholat berjamaah dan istirahat.</h4>
             </div>
             <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
-                <img src="./images/pushup.jpg" style="width: 40rem; height: auto; border-radius: 3rem;  " alt="">
+                <img src="./images/istirahat 1.jpg" style="width: 35rem; height: 25rem; border-radius: 3rem;" alt="">
             </div>
         </div>
     </div>
