--- a/fara.html
+++ b/fara.html
@@ -448,7 +448,7 @@
             </div>
         </div> 
 
-        <div class="container" style="padding-top: 10rem; padding-bottom: 10remx    ;">
+        <div class="container" style="padding-top: 10rem; padding-bottom: 10rem   ;">
             <div class="row">
                 <div class="col-md-6">
                     <img src="./images/Beberapa draft MoU yang saya buat sebagai tim Akademik ubig.jpg" alt=""
