--- a/fara.html
+++ b/fara.html
@@ -396,7 +396,7 @@
                     <img src="./images/Botpress lama Manajemen siswa.jpg" alt=""
                         style="margin-right: 10px; width: 50rem; height: auto; border-radius: 3rem;" class="myImg">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6"> 
                     <h2 style="text-align: center; margin-top: 10rem;">Botpress lama Manajemen siswa</h2>
                 </div>
             </div>
@@ -419,7 +419,7 @@
     <div class="three3">
         <div class="container" style="padding-top: 20rem; text-align: center;">
 
-            <h1 style="font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Digital Marketing Nobox.AI Dan Tim Akademik Ubig
+            <h1 style="font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Digital Marketing Nobox.AI
             </h1>
             <!-- <h3>Selama Magang di Ubig, saya mengerjakan berbagai proyek. Berikut adalah proyek-proyek saya:</h3> -->
         </div>
@@ -435,6 +435,13 @@
                 </div>
             </div>
         </div> 
+
+        <div class="container" style="padding-top: 20rem; text-align: center;">
+
+            <h1 style="font-size: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"> Tim Akademik Ubig
+            </h1>
+            <!-- <h3>Selama Magang di Ubig, saya mengerjakan berbagai proyek. Berikut adalah proyek-proyek saya:</h3> -->
+        </div>
 
         <div class="container" style="padding-top: 10rem;">
             <div class="row">
